--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,7 +40,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
-    "eslint-plugin-react": "^7.31.11"
+    "eslint-plugin-react": "^7.31.11",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
