--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.13",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -21,29 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
-    "eslint-plugin-react": "^7.31.11",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.13"
   }
 }
