--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
