--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "autoprefixer": "^10.4.13"
   },
   "browserslist": {
